add some stuffs in step3

--- a/project.json
+++ b/project.json
@@ -71,7 +71,7 @@
             {
                 "title": "Confection de la cabine du camion",
                 "duration": 14400,
-                "content": "En se basant sur le patron de la cabine, découper le tissus clair d'ameublement aux dimensions du patron en ajoutant 3cm pour faire les ourlets.\n\nPrendre d' autre tissus pour fabriquer les éléments ( le phare, poignée, rétroviseur) en les bourrant de ouate .\n\nCoudre le ruban pour délimiter les contours de la portière.\n",
+                "content": "Découper le tissus clair d'ameublement aux dimensions du patron papier en ajoutant 3cm pour faire les ourlets.\n\nFaire une poche en tissus  à l'emplacement du volant dans laquelle viendra se glisser le support du volant (disque en carton bois).\n\nPrendre d' autre tissus pour fabriquer les éléments ( le phare, poignée, rétroviseur) en les bourrant de ouate . Les coudre aux emplacements prévus sur la cabine\n\nCoudre le ruban pour délimiter les contours de la portière.\n",
                 "inputs": [
                     {
                         "component": {
