--- a/project.json
+++ b/project.json
@@ -173,7 +173,59 @@
             {
                 "title": "Interrupteur du volant",
                 "duration": 300,
-                "content": ""
+                "content": "Découper un cercle dans une planche de contreplaqué d'une épaisseur de 3 mm et d'un diamètre de 19 cm à la laser.\n\nSouder deux fils de connexion Rouge et Noir sur chaque patte du bouton poussoir.\n\nPercer 4 trous au centre de la planche de contreplaqué. Insérer un bouton poussoir .\n\n\n\nFixer à la \"colle à chaud\" le bouton interrupteur sur la planche Placer la planche dans une pochette pré-déterminée de la cabine - derrière la fenêtre par exemple ",
+                "inputs": [
+                    {
+                        "component": {
+                            "slug": "bouton-poussoir-miniature",
+                            "quantity": 1,
+                            "github_organization": "myhumankit",
+                            "github_repository": "myworkshop-humanlab-components"
+                        }
+                    },
+                    {
+                        "component": {
+                            "slug": "fil-de-cablage-multibrins-0.2",
+                            "quantity": 1,
+                            "github_organization": "myhumankit",
+                            "github_repository": "myworkshop-humanlab-components"
+                        }
+                    },
+                    {
+                        "tool": {
+                            "slug": "machine-laser",
+                            "github_organization": "myworkshop-humanlab-tools",
+                            "github_repository": "myhumankit"
+                        }
+                    },
+                    {
+                        "component": {
+                            "slug": "etain",
+                            "quantity": 1
+                        }
+                    },
+                    {
+                        "tool": {
+                            "slug": "fer-a-souder",
+                            "github_organization": "myhumankit",
+                            "github_repository": "myworkshop-humanlab-tools"
+                        }
+                    },
+                    {
+                        "component": {
+                            "slug": "colle-a-chaud",
+                            "quantity": 1
+                        }
+                    }
+                ],
+                "media": [
+                    {
+                        "image": {
+                            "url": "images/support-volant-bouton.jpg",
+                            "caption": "support volant avec bouton intégré"
+                        }
+                    }
+                ]
             },
             {
                 "title": "Fabrication des roues",
