--- a/project.json
+++ b/project.json
@@ -163,13 +163,13 @@
                     {
                         "image": {
                             "url": "fabrication-route2.jpg",
-                            "caption": "fabrication-route2"
+                            "caption": "fabrication route"
                         }
                     },
                     {
                         "image": {
                             "url": "fabrication-route3.jpg",
-                            "caption": "fabrication route3"
+                            "caption": "fabrication route"
                         }
                     }
                 ]
